// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DEPRECATED_PhoneIntegrationList/> render() should render 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Phone
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Add Phone Number
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-container"
  >
    <div
      class="mb-3"
    >
      Chat with your customers over the phone from Gorgias.
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <div>
              <b>
                <span
                  class="mr-3"
                >
                  🍏
                </span>
                Fake phone integration
              </b>
              <span
                class="text-faded ml-3"
              >
                +1 415-111-2222
              </span>
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DEPRECATED_PhoneIntegrationList/> render() should render with a warning message 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Phone
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Add Phone Number
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-container"
  >
    <div
      class="mb-3"
    >
      Chat with your customers over the phone from Gorgias.
    </div>
    <div
      class="alert warning d-inline-flex"
    >
      <div
        class="iconContainer"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <div
        class="content"
      >
        <span
          class="label"
        >
          <span
            class="d-flex align-items-center"
          >
            You have reached 
            1
            /
            2
             
            integrations. To add more, you must
            <a
              class="ml-1 mr-1"
              to="/app/settings/billing/plans"
            >
              upgrade
            </a>
            to a higher plan.
          </span>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <div>
              <b>
                <span
                  class="mr-3"
                >
                  🍏
                </span>
                Fake phone integration
              </b>
              <span
                class="text-faded ml-3"
              >
                +1 415-111-2222
              </span>
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DEPRECATED_PhoneIntegrationList/> render() should render with an error message and without creation button 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Phone
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-container"
  >
    <div
      class="mb-3"
    >
      Chat with your customers over the phone from Gorgias.
    </div>
    <div
      class="alert error d-inline-flex"
    >
      <div
        class="iconContainer"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <div
        class="content"
      >
        <span
          class="label"
        >
          <span
            class="d-flex align-items-center"
          >
            You have reached 
            1
            /
            1
             
            integrations. To add more, you must
            <a
              class="ml-1 mr-1"
              to="/app/settings/billing/plans"
            >
              upgrade
            </a>
            to a higher plan.
          </span>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <div>
              <b>
                <span
                  class="mr-3"
                >
                  🍏
                </span>
                Fake phone integration
              </b>
              <span
                class="text-faded ml-3"
              >
                +1 415-111-2222
              </span>
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/phone/1/preferences"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DEPRECATED_PhoneIntegrationList/> render() should render with empty list 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Phone
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="btn btn-success"
        type="submit"
      >
        Add Phone Number
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-container"
  >
    <div
      class="mb-3"
    >
      Chat with your customers over the phone from Gorgias.
    </div>
    <div
      class="mt-3"
    >
      <div>
        You have no integration of this type at the moment.
      </div>
    </div>
  </div>
</div>
`;
